test/fail/fail-err.js

var seneca = require('../..')()

seneca.fail( new Error('eek!') )
